syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";
import "default.proto";

enum ValidatorState {
    VALIDATOR_STATE_WAITING = 0;
    VALIDATOR_STATE_ACTIVE = 1;
}

message Validator {
    PublicKey public_key = 1;
    ValidatorState state = 2;
    UInt256 votes = 3;
}